@@ -47,6 +47,7 @@ Release 0.22b.dev (unpublished)
     convert string representations to correct data type,
     normalize values,
     raise ValueError for invalid attribute names or values.
+  - Removed `Element.set_class()`.
 
 * docutils/parsers/docutils_xml.py
 
